<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <!--Header text for the list of toppings [CHAR LIMIT=20]-->
    <string name="toppings">Toppings</string>
    <!--whipped cream topping checkbox[CHAR LIMIT=20]-->
    <string name="topping1">Whipped cream</string>
    <!--chocolate topping checkbox[CHAR LIMIT=20]-->
    <string name="topping2">Chocolate</string>
    <!--Thank you message for the order summary. [CHAR LIMIT=NONE]-->
    <string name="thank_you">Thank You!</string>
    <!--Total price for the order summary. It will be shown in the format of"Total: $10" where $10 is the price. [CHAR LIMIT=NONE]-->
    <string name="order_summary_price">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>
    <!--Quantity of coffee cups for the order summary. It will be shown in the format of"Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]-->
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <!--Whipped cream topping for the order summary. It will be shown in the format of"Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]-->
    <string name="order_summary_whipped_cream">Add Whipped Cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>
    <!--Chocolate topping for the order summary. It will be shown in the format of"Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]-->
    <string name="order_summary_chocolate">Add Chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>
    <!--Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the user's name.[CHAR LIMIT=NONE]-->
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="Hint">Name</string>
    <!--Header for quantity picker[CHAR LIMIT=20]-->
    <string name="quantity">Quantity</string>
    <!--Order Button text [CHAR LIMIT=20]-->
    <string name="order_button">order</string>
    <!--Subject line for the order summary email. It will be in the format of"Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]-->
    <string name="order_summary_email_subject">Just Java For <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="Quantity_summary">Quantity:</string>
    <string name="add_whipped_cream">Add Whipped Cream?</string>
    <string name="add_chocolate">Add Chocolate?</string>

    <!-- Message displayed when the customer tries to request more than 100 coffees -->
    <string name="too_many_coffees">"You can't order more than 100 coffee per order"</string>

    <!-- Message displayed when the customer tries to request less than 1 coffee -->
    <string name="too_few_coffees">"you can't order less than 1 coffee"</string>
</resources>
